@@ -7,6 +7,10 @@
 	(SyscallObserver.updateSyscallEnter): If the incoming system call is in the
 	system call stack trace HashSet, dump a stack trace before continuing. Fixes
 	#4112.
+	
+	* FCatch.java: Commented.
+	(handleTaskBlock): Added some new special switch cases. Make sure the 
+	stack trace StringBuffer is reset after each trace. Simplified switch.
 
 2007-02-26  Tim Moore  <timoore@redhat.com>
 
